--- a/wsgiadmin/templates/login.html
+++ b/wsgiadmin/templates/login.html
@@ -3,22 +3,8 @@
 {% load crispy_forms_tags %}
 {% block container %}
     <div class="row">
-        <div class="span6">
-            <h2>{% trans "Create new account" %}</h2>
-        </div>
-    </div>
-    <div class="row">
         <div class="span6 offset2">
-            {% trans "To create a new account" %}
-            <a href="{% url registration %}">{% trans "use following form" %}</a>
-        </div>
-    </div>
-    <div class="row">
-        <div> &nbsp;</div>
-    </div>
-    <div class="row">
-        <div class="span6">
-            <h2>{% trans "Login to existing account" %}</h2>
+            <h2>{% trans "Login" %}</h2>
         </div>
     </div>
     <div class="row">
@@ -27,12 +13,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="span3 offset3">
-
-            <a href="{% url reset_passwd %}">
-                {% trans "Send forgotten password" %}
-            </a>
+        <div class="span6 offset2 center">
+            <a href="{% url registration %}">{% trans "Registration" %}</a> |
+            <a href="{% url reset_passwd %}">{% trans "Lost password" %}</a>
         </div>
-
     </div>
 {% endblock %}
