--- a/wsgiadmin/templates/passwd_form.html
+++ b/wsgiadmin/templates/passwd_form.html
@@ -3,21 +3,15 @@
 {% load crispy_forms_tags %}
 {% block container %}
     <div class="row">
-        <div class="span6">
-            <h2>{% trans "Reset password" %}</h2>
-        </div>
-    </div>
-    <div class="row">
         <div class="span6 offset2">
+            <h2>{% trans "Password recovery" %}</h2>
             {% crispy form form_helper %}
         </div>
     </div>
     <div class="row">
-        <div class="span3 offset3">
-
-            <a href="{% url login %}">{% trans "Go to login page" %}</a>
+        <div class="span6 offset2 center">
+            <a href="{% url login %}">{% trans "Go to login page" %}</a> |
             <a href="{% url registration %}">{% trans "Registration" %}</a>
         </div>
-
     </div>
 {% endblock %}
