--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -26,6 +26,10 @@
                             {% if menu_active == "webapps" %} class="active"{% endif %}>
                         <a href="{% url app_list %}">{% trans "Web apps" %}</a>
                     </li>
+                    <li
+                            {% if menu_active == "apps" %} class="active"{% endif %}>
+                        <a href="{% url apps_list %}">{% trans "Apps" %}<sup style="color: red;">beta</sup></a>
+                    </li>
                     <li{% if menu_active == "dbs" %} class="active"{% endif %}>
                         <a href="{% url db_list %}">{% trans "Databases" %}</a>
                     </li>
@@ -35,6 +39,10 @@
                     <li
                             {% if menu_active == "emails" %} class="active"{% endif %}>
                         <a href="{% url mailbox_list %}">{% trans "E-mails" %}</a>
+                    </li>
+                    <li
+                            {% if menu_active == "tools" %} class="active"{% endif %}>
+                        <a href="">{% trans "Tools" %}<sup style="color: red;">beta</sup></a>
                     </li>
                     <li
                             {% if menu_active == "settings" %} class="active"{% endif %}>
@@ -143,6 +151,27 @@
                             <a href="{% url cron_list %}">
                                 <i class="icon-list"></i>
                                 {% trans "Crontab" %}</a>
+                        </li>
+                    {% endif %}
+                    {% if menu_active == "apps" %}
+                        <li>
+                            <a href="{% url apps_list %}"><i class="icon-list"></i>{% trans "Apps list" %}</a>
+                        </li>
+                        <li><br></li>
+                        <li>
+                            <a href="{% url app_add_static %}"><i class="icon-plus-sign"></i>{% trans "Add static app" %}</a>
+                        </li>
+                        <li>
+                            <a href="{% url app_add_php %}"><i class="icon-plus-sign"></i>{% trans "Add php app" %}</a>
+                        </li>
+                        <li>
+                            <a href="{% url app_add_uwsgi %}"><i class="icon-plus-sign"></i>{% trans "Add uwsgi app" %}</a>
+                        </li>
+                        <li>
+                            <a href="{% url app_add_native %}"><i class="icon-plus-sign"></i>{% trans "Add native app" %}</a>
+                        </li>
+                        <li>
+                            <a href="{% url app_add_proxy %}"><i class="icon-plus-sign"></i>{% trans "Add proxy" %}</a>
                         </li>
                     {% endif %}
                     {% if menu_active == "dbs" %}
