uninstall python apps, app detail

--- a/wsgiadmin/m/css/style.css
+++ b/wsgiadmin/m/css/style.css
@@ -163,3 +163,9 @@ body {
     height: 200px;
     font-family: monospace;
 }
+
+.log {
+    height: 150px;
+    width: 95%;
+    overflow: auto;
+}
