--- a/wsgiadmin/templates/apps.html
+++ b/wsgiadmin/templates/apps.html
@@ -27,23 +27,21 @@
                     <td>{{ app.name }}</td>
                     <td class="list_actions">
                         {% if app.app_type == "static" %}
-                            <a href="{% url app_params_static app_id=app.id %}"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
+                            <a href="{% url app_params_static app_id=app.id %}" class="btn btn-warning"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
                         {% elif app.app_type == "php" %}
-                            <a href="{% url app_params_php app_id=app.id %}"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
+                            <a href="{% url app_params_php app_id=app.id %}" class="btn btn-warning"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
                         {% elif app.app_type == "python" %}
-                            <a href="{% url app_params_python app_id=app.id %}"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
+                            <a href="{% url app_params_python app_id=app.id %}" class="btn btn-warning"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
                         {% elif app.app_type == "native" %}
-                            <a href="{% url app_params_native app_id=app.id %}"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
+                            <a href="{% url app_params_native app_id=app.id %}" class="btn btn-warning"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
                         {% elif app.app_type == "proxy" %}
-                            <a href="{% url app_params_proxy app_id=app.id %}"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
+                            <a href="{% url app_params_proxy app_id=app.id %}" class="btn btn-warning"><i class="icon-edit"></i>{% trans "Parameters" %}</a>
                         {% endif %}
-                        <a href=""><i class="icon-remove"></i>{% trans "Delete" %}</a>
-                        <br>
-                        {% if app.app_type == "uwsgi" or app.app_type == "native" %}
-                        <a href=""><i class="icon-refresh"></i>{% trans "Restart" %}</a>
+                        {% if app.app_type == "python" or app.app_type == "native" %}
+                        <a href="{% url app_restart %}?app_id={{ app.id }}" class="btn btn-primary"><i class="icon-refresh"></i>{% trans "Restart" %}</a>
                         {% endif %}
-                        <a href=""><i class="icon-info-sign"></i>{% trans "Info" %}</a>
-                        <a href=""><i class="icon-align-justify"></i>{% trans "Logs" %}</a>
+                        <a href="{% url app_detail app_id=app.id %}" class="btn btn-info"><i class="icon-info-sign"></i>{% trans "Info" %}</a>
+                        <a href="#a" onclick="if(confirm('{% trans "Are you sure?" %}')) {document.location= '{% url app_rm %}?app_id={{ app.id }}';}" class="btn btn-danger"><i class="icon-remove"></i>{% trans "Delete" %}</a>
                     </td>
                 </tr>
             {% endfor %}
