--- a/wsgiadmin/templates/reg.html
+++ b/wsgiadmin/templates/reg.html
@@ -7,8 +7,7 @@
 
     <h2>{% trans "Registration" %}</h2>
     <form action="{% url registration %}" method="post" class="well form-horizontal" id="reg-form">
-        {% crispy form1 form_helper %}
-        {% crispy form2 form_helper %}
+        {% crispy form form_helper %}
         <div class="form-actions">
             <input type="submit" value="{% trans "Register" %}"/>
         </div>
