--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -16,23 +16,29 @@
                             <a href="{% url wsgiadmin.users.views.show %}" class="red">{% trans "Users" %}</a>
                         </li>
                     {% endif %}
+                    {% if user.domain_set.count %}
                     <li {% if menu_active == "domains" %} class="active"{% endif %}>
                         <a href="{% url domains_list %}">{% trans "Domains" %}</a>
                     </li>
+                    {% endif %}
+                    {% if user.usersite_set.count %}
                     <li {% if menu_active == "webapps" %} class="active"{% endif %}>
                         <a href="{% url app_list %}">{% trans "Web apps" %}</a>
                     </li>
-                    {% if u.is_superuser %}
-                    <li {% if menu_active == "apps" %} class="active"{% endif %}>
-                        <a href="{% url apps_list %}">{% trans "Apps" %}<sup style="color: red;">beta</sup></a>
-                    </li>
                     {% endif %}
+                    <li {% if menu_active == "apps" %} class="active"{% endif %}>
+                        <a href="{% url apps_list %}">{% trans "Apps" %}</a>
+                    </li>
+                    {% if user.mysqldb_set.count or user.pgsql_set.count %}
                     <li{% if menu_active == "dbs" %} class="active"{% endif %}>
                         <a href="{% url db_list %}">{% trans "Databases" %}</a>
                     </li>
+                    {% endif %}
+                    {% if user.ftp_set.count %}
                     <li{% if menu_active == "ftps" %} class="active"{% endif %}>
                         <a href="{% url ftp_list %}">{% trans "FTP" %}</a>
                     </li>
+                    {% endif %}
                     <li {% if menu_active == "emails" %} class="active"{% endif %}>
                         <a href="{% url mailbox_list %}">{% trans "E-mails" %}</a>
                     </li>
@@ -232,14 +238,6 @@
         </div>
         <div id="main" class="span9">
             <div id="notifications">
-                {% if not u.parms.count_domains and menu_active != "domains" %}
-                    <div class="alert alert-info">
-                        {% blocktrans %}
-                            Most of services depends on domain. Good place to start right now is
-                        {% endblocktrans %}
-                        <a href="{% url domains_list %}">{% trans "domain managment" %}</a>.
-                    </div>
-                {% endif %}
                 {% if messages %}
                     {% for message in messages %}
                         <div class="alert alert-info">{{ message }}</div>
