--- a/wsgiadmin/templates/app_info.html
+++ b/wsgiadmin/templates/app_info.html
@@ -68,6 +68,32 @@
         {% endfor %}
     </table>
 
+
+    <h2>{% trans "Databases" %}</h2>
+
+    {% if dbs %}
+    <p><a href="{% url db_add %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>
+    <table class="table table-striped">
+        <tr>
+            <th>{% trans "Name" %}</th>
+            <th>{% trans "Comment" %}</th>
+            <th>{% trans "Akce" %}</th>
+        </tr>
+        {% for db in dbs %}
+        <tr>
+            <td>{{ db.name }}</td>
+            <td>{{ db.comment }}</td>
+            <td>
+                <a href="{% url db_update pk=db.id %}" class="btn">{% trans "Update" %}</a>
+                <a href="#a" class="btn btn-danger" onclick="if(confirm('{% trans "Are you sure?" %}')){ document.location='{% url db_rm %}?db_id={{ db.id }}'; }">{% trans "Delete" %}</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+    {% else %}
+        <p><a href="{% url db_add %}?app_id={{ app.id }}">{% trans "Add database to this app" %}</a></p>
+    {% endif %}
+
     <h2>{% trans "Log files" %}</h2>
 
     {% for log in app.get_logs %}
