Format parameters update

--- a/wsgiadmin/templates/app_info.html
+++ b/wsgiadmin/templates/app_info.html
@@ -62,7 +62,7 @@
         </tr>
         {% for key, value in app.format_parameters.items %}
         <tr>
-            <th>{{ key }}</th>
+            <td>{{ key }}</td>
             <td>{{ value|safe }}</td>
         </tr>
         {% endfor %}
